# kll

./: .gitignore  .gitmodules  CMakeLists.txt
kelala Project/: kelala.als
kelala Project/Ableton Project Info/: Project.cfg
kelala Project/Samples/Imported/: Kelela - Rewind (Official Video).mp3.asd
kelala Project/Samples/Waveforms/Components/Spectral/: Spectral 7.aif  Spectral 7.aif.asd
kelala Project/Samples/Waveforms/Drums/Cymbal/: A-HiHat 1 Half Open A.aif  A-HiHat 1 Half Open A.aif.asd  A-HiHat 2 Closed B.aif  A-HiHat 2 Closed B.aif.asd
kelala Project/Samples/Waveforms/Drums/Kick/: E-Kick 2.aif  E-Kick 2.aif.asd  E-Kick 4.aif  E-Kick 4.aif.asd
kelala Project/Samples/Waveforms/Drums/Percussion/: A-Conga Hi Slap 1.aif  A-Conga Hi Slap 1.aif.asd
kelala Project/Samples/Waveforms/Drums/Snare/: A-Snare Leedy 1 A.aif  A-Snare Leedy 1 A.aif.asd  E-Snare 2.aif  E-Snare 2.aif.asd
src/: FeedbackTunnel.cpp  FeedbackTunnel.h  MidiPlayer.cpp  MidiPlayer.h  MidiRecordingApp.cpp  MidiRecordingApp.h  MidiTriggers.cpp  MidiTriggers.h  PercussionVisuals.cpp  PercussionVisuals.h  main.cpp  ofApp.cpp  ofApp.h
src/kll/: Behaviour.cpp  Behaviour.h  Block.cpp  Block.h  Clock.h  Engine.cpp  Engine.h  Environment.cpp  Environment.h  FallBehaviour.cpp  FallBehaviour.h  ImplodeBehaviour.cpp  ImplodeBehaviour.h  LuaMidiSender.cpp  Mesh.cpp  Mesh.h  MidiTriggers.cpp  MidiTriggers.h  Object.cpp  Object.h  PercussionVisuals.cpp  PercussionVisuals.h  kll.cpp  kll.h
src/kll/Behaviours/: AddRotationBehaviour.cpp  AddRotationBehaviour.h  Behaviour.h  FallBehaviour.cpp  FallBehaviour.h  ImplodeBehaviour.cpp  ImplodeBehaviour.h
src/kll/Engine/: BehaviourPool.cpp  BehaviourPool.h  Clock.cpp  Clock.h  Engine.cpp  Engine.h  Environment.cpp  Environment.h  FileWatcher.cpp  FileWatcher.h  FolderWatcher.cpp  FolderWatcher.h  KllCamera.cpp  KllCamera.h  Light.cpp  Light.h  LuaHelpers.h  LuaMidiSender.cpp  LuaMidiSender.h  MidiTriggers.cpp  MidiTriggers.h  gvec3.h
src/kll/Objects/: Block.cpp  Block.h  Flock.cpp  Flock.h  Object.cpp  Object.h  TunnelSection.cpp  TunnelSection.h
src/kll/Render/: FlatShader.cpp  FlatShader.h  ObjectMotionBlur.cpp  ObjectMotionBlur.h  Shader.cpp  Shader.h
src/swig/: Environment.i
